# Flipkart-Product-Recommender

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  wiki.md
flipkart/: config.py  rag_chain.py
flipkart/data_loader/: data_converter.py  data_ingestion.py
flipkart_product_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prometheus/: prometheus-configmap.yaml  prometheus-deployment.yaml
templates/: index.html
